<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="it.ilogreco.levelup.ui.metrics.MetricsFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_metrics" />

    <fragment
        android:id="@+id/nav_home"
        android:name="it.ilogreco.levelup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_edit_tasks"
            app:destination="@id/nav_user_task_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_user_task_detail"
        android:name="it.ilogreco.levelup.ui.task_detail.UserTaskDetailFragment"
        android:label="@string/menu_edit_task"
        tools:layout="@layout/fragment_task_detail" />

    <fragment
        android:id="@+id/nav_edit_category_list"
        android:name="it.ilogreco.levelup.ui.category.CategoryListFragment"
        android:label="@string/menu_edit_category"
        tools:layout="@layout/fragment_category_list" >
        <action
            android:id="@+id/action_nav_edit_category_list_to_nav_task_category_detail"
            app:destination="@id/nav_task_category_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_task_category_detail"
        android:name="it.ilogreco.levelup.ui.category_detail.CategoryDetailFragment"
        android:label="Edit Category"
        tools:layout="@layout/fragment_category_detail" />

    <fragment
        android:id="@+id/nav_settings_frag"
        android:name="it.ilogreco.levelup.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <action android:id="@+id/open_settings_frag"
        app:destination="@+id/nav_settings_frag" />
</navigation>